[package]
name = "activitymemes"
version = "0.0.0"
authors = ["asyncth <asyncthry@gmail.com>"]
edition = "2021"
description = "An open-source federated meme-sharing platform"
readme = "README.md"
repository = "https://github.com/asyncth/activitymemes.git"
license = "AGPL-3.0-only"
keywords = ["activitypub", "fediverse", "social", "activitystreams", "federation"]
publish = false

[profile.dev.package."*"]
debug = false

[profile.dev]
debug = false

[profile.release.package."*"]
codegen-units = 1

[profile.release]
codegen-units = 1
lto = true

[dependencies]
actix-web = { version = "4", features = ["rustls", "secure-cookies"] }
actix-files = "0.6.1"
activitystreams = "0.6.2"
async-recursion = "1"
async-trait = "0.1.56"
awc = { version = "3", features = ["rustls"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", default-features = false, features = ["std", "alloc"] }
futures = { version = "0.3.21", features = ["std", "async-await"] }
jsonwebtoken = "8"
once_cell = "1"
pbkdf2 = "0.11.0"
pin-project = "1"
rand = "0.8.5"
regex = "1"
rsa = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.2"
sqlx = { version = "0.5.13", features = ["runtime-actix-rustls", "postgres", "uuid", "json", "chrono"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
url = "2"
uuid = { version = "0.8.2", features = ["v4"] }
